# START

./: README.md  license.txt
START_frontend/Sources/StartSdk/sdk/: CMakeLists.txt  build.gradle
START_frontend/Sources/StartSdk/sdk/src/main/: AndroidManifest.xml
START_frontend/Sources/StartSdk/sdk/src/main/cpp/: constants.h  eye-sdk-lib.cpp  eye-sdk-lib.h
START_frontend/Sources/StartSdk/sdk/src/main/java/com/reading/start/sdk/: AppCore.java  AppPermissions.java  Constants.java
START_frontend/Sources/StartSdk/sdk/src/main/java/com/reading/start/sdk/core/: CalibrateMode.java  CalibrateType.java  DetectMode.java  DetectType.java  Settings.java  SettingsFactory.java  StartSdk.java  StartSdkListener.java  StartSdkState.java
START_frontend/Sources/StartSdk/sdk/src/main/java/com/reading/start/sdk/general/: SdkLog.java
START_frontend/Sources/StartSdk/sdk/src/main/java/com/reading/start/sdk/ui/: UiConstants.java
START_frontend/Sources/StartSdk/sdk/src/main/java/com/reading/start/sdk/utils/: CameraUtils.java  DevicePositionSensorManager.java  Kalman.java  LightSensorManager.java  ProcessExecutor.java  Utils.java  (+4 more)
START_frontend/Sources/StartSdk/sdk/src/main/res/drawable/: sdk_cursor_background.xml
START_frontend/Sources/StartSdk/sdk/src/main/res/layout/: sdk_activity_main.xml  sdk_fragment_camera.xml  sdk_fragment_camera_postprocessing.xml  sdk_fragment_select_mode.xml  sdk_fragment_settings.xml  sdk_fragment_test.xml  sdk_item_spinner.xml  sdk_item_spinner_dropdown.xml
START_frontend/Sources/StartSdk/sdk/src/main/res/values/: sdk_colors.xml  sdk_strings.xml
(+893 files in other folders)
